Added interest section titles. Added AI section. Minor tweaks

--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
                 <div class="card-shine"></div> -->
             </div>
             <div class="reflection"></div>
-            <div class="reflection_2"></div>
         </aside>
         <header class="main-nav">
             <div class="nav-left">
@@ -164,7 +163,7 @@
                     categorias para expandi-las e visualizar mais habilidades.</small>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_backend">Backend</h3>
+                        <h2 data-translate-key="skills_backend">Backend</h2>
                         <svg aria-hidden="true" focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16"
                             width="16" height="16" fill="#ffffff">
                             <path
@@ -187,7 +186,7 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_frontend">Frontend</h3><svg aria-hidden="true" focusable="false"
+                        <h2 data-translate-key="skills_frontend">Frontend</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
                             <path
                                 d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
@@ -211,7 +210,7 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_databases">Bancos de dados</h3><svg aria-hidden="true"
+                        <h2 data-translate-key="skills_databases">Bancos de dados</h2><svg aria-hidden="true"
                             focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16"
                             fill="#ffffff">
                             <path
@@ -236,7 +235,7 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_devops">DevOps</h3><svg aria-hidden="true" focusable="false"
+                        <h2 data-translate-key="skills_devops">DevOps</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
                             <path
                                 d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
@@ -255,7 +254,7 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_tests">Testes</h3><svg aria-hidden="true" focusable="false"
+                        <h2 data-translate-key="skills_tests">Testes</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
                             <path
                                 d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
@@ -270,7 +269,7 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_architecture">Arquitetura</h3><svg aria-hidden="true"
+                        <h2 data-translate-key="skills_architecture">Arquitetura</h2><svg aria-hidden="true"
                             focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16"
                             fill="#ffffff">
                             <path
@@ -289,8 +288,8 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_code_quality">Qualidade de
-                            código</h3><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
+                        <h2 data-translate-key="skills_code_quality">Qualidade de
+                            código</h2><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
                             viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
                             <path
                                 d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
@@ -307,7 +306,7 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_agile">Agile</h3><svg aria-hidden="true" focusable="false"
+                        <h2 data-translate-key="skills_agile">Metodologias</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
                             <path
                                 d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
@@ -322,8 +321,8 @@
                 </details>
                 <details open>
                     <summary>
-                        <h3 data-translate-key="skills_other">Outras
-                            habilidades</h3><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
+                        <h2 data-translate-key="skills_other">Outras
+                            habilidades</h2><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
                             viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
                             <path
                                 d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
@@ -660,12 +659,12 @@
                     <div class="card-content">
                         <img class="card-content-img" src="static/img/utilbox/utilbox-logo.png" />
                         <div class="card-title">
-                            <h2>Utilbox</h3>
-                                <div class="badges card-badges">
-                                    <div class="badge" data-translate-key="project_opensource">Código aberto
-                                    </div>
-                                    <div class="badge" data-translate-key="project_mit_license">Licença MIT</div>
+                            <h2>Utilbox</h2>
+                            <div class="badges card-badges">
+                                <div class="badge" data-translate-key="project_opensource">Código aberto
                                 </div>
+                                <div class="badge" data-translate-key="project_mit_license">Licença MIT</div>
+                            </div>
                         </div>
                         <div class="card-text">
                             <p data-translate-key="project_utilbox_description">
@@ -939,6 +938,7 @@
 
             <section id="interests" class="section">
                 <h1 data-translate-key="interests_title">🤓 Interesses</h1>
+                <h3 data-translate-key="interests_tech_title">Tecnologia</h3>
                 <p data-translate-key="interests_tech">
                     Gosto de programar, ler e aprender coisas novas. Estou sempre em busca de
                     novas tecnologias, novos
@@ -949,6 +949,8 @@
                     software para estudo e desenvolvimento
                     pessoal e profissional.</p>
                 <br />
+
+                <h3 data-translate-key="interests_science_title">Ciência</h3>
                 <p data-translate-key="interests_science">
                     Gosto de tudo relacionado a
                     ciência, principalmente astronomia. Assuntos como mecânica quântica,
@@ -959,6 +961,7 @@
                     me ater a processos bem definidos
                     e seguí-los para entregar código com a melhor qualidade possível.</p>
                 <br />
+                <h3 data-translate-key="interests_communication_title">Comunicação</h3>
                 <p data-translate-key="interests_communication">
                     Tanto no ambiente pessoal quanto no ambiente profissional, gosto de cultivar
                     diálogo aberto e sincero
@@ -967,12 +970,38 @@
                     rápido. Também gosto de mediar diferentes pontos de vista e encontrar uma
                     solução em comum.</p>
                 <br />
+                <h3 data-translate-key="interests_teamwork_title">Trabalho em Equipe</h3>
                 <p data-translate-key="interests_teamwork">
                     Gosto de trabalhar em equipes com objetivos de crescimento e aprendizado em comum. Procuro
                     sempre manter um bom e cordial relacionamento com todos. Apesar de me considerar introvertido, gosto
                     de estar em contato com pessoas e diferentes opiniões.
                     Tanto o ambiente pessoal quanto o profissional são compartilhados com outras pessoas e saber
                     entender, respeitar e as vezes absorver outros pontos de vista nos mantém em constante evolução.</p>
+                <br />
+                <h3 data-translate-key="interests_ai_title" class="gradient-text">Inteligência artificial</h3>
+                <p data-translate-key="interests_ai_1">
+                    Você entraria em um prédio cujo projeto arquitetônico foi feito 100% com inteligência artificial,
+                    sem a avaliação de um engenheiro? Claro que a utilização de IA no trabalho, em diversas áreas criou
+                    um murmúrio muito grande nos últimos anos.</p>
+                <p data-translate-key="interests_ai_2">Muito se fala em substituir desenvolvedores por IA, porém
+                    vamos lembrar que não se substituíram os engenheiros civis com o AutoCad. Da mesma forma que o
+                    AutoCad otimizou o trabalho do engenheiro, a IA é uma ferramenta valiosa no processo de
+                    desenvolvimento. Ela é ainda mais transformadora pois ela agiliza a escrita
+                    de código,
+                    auxilia na correção de bugs, e nos permite focar nos desafios <i>humanos</i>.</p>
+                <p data-translate-key="interests_ai_3">Esta é a palavra chave
+                    aqui. Devemos nos lembrar sempre que a essência do conhecimento que os
+                    grandes modelos de linguagem de IA possuem, foi treinada e embasada no conhecimento humano. Por
+                    mais inteligente que a máquina seja, ela não pode substituir a criatividade e humanidade empregada
+                    em resolver problemas e encontrar soluções simples para desafios como a arquitetura de sistemas
+                    complexos, a compreensão profunda das necessidades do usuário e a tomada de decisões
+                    estratégicas.</p>
+                <p data-translate-key="interests_ai_4">A área da tecnologia está em constante evolução, e IA é a mais
+                    nova e grandiosa delas. Cabe a nós nos
+                    adaptarmos, evoluir nossa forma de trabalhar, sermos cada vez mais criteriosos com código,
+                    analíticos, e decidir onde e quando precisamos de código de máquina, e os momentos em que é preciso
+                    um toque humano.</p>
+                <br />
             </section>
             <section id="socials" class="section">
                 <h1 data-translate-key="socials_title">🌐 Contato e Redes Sociais</h1>
@@ -1001,7 +1030,6 @@
         initializeTheme();
         initializeLanguage();
 
-        //Nav Toggle
         document.querySelector('.nav-toggle').addEventListener('click', function () {
             document.querySelector('.nav-menu').classList.toggle('active');
         });
@@ -1021,61 +1049,42 @@
             let lastMouseY = 50;
             const aside = document.querySelector("aside");
             const reflection = aside.querySelector('.reflection');
-            const reflection_2 = aside.querySelector('.reflection_2');
             const holoPattern = document.querySelector('.holo-pattern');
-
             aside.addEventListener("mouseenter", (e) => {
                 reflection.style.opacity = 1;
-                reflection_2.style.opacity = 1;
             });
 
             aside.addEventListener("mousemove", (e) => {
                 const { width, height, left, top } = aside.getBoundingClientRect();
-
                 const x = (e.clientX - left) / width * 100;
                 const y = (e.clientY - top) / height * 100;
-
                 const rotateX = ((e.clientY - top - height / 2) / 25) * -1;
                 const rotateY = (e.clientX - left - width / 2) / 25;
-
                 aside.style.setProperty("--rotateX", `${rotateX}deg`);
                 aside.style.setProperty("--rotateY", `${rotateY}deg`);
-
-                // Blend mouse position with rotation-based light position
                 const lightX = x * 0.8 + (50 + rotateY * 2) * 0.2;
                 const lightY = y * 0.8 + (50 + rotateX * 2) * 0.2;
-
-                // Ensure lightX and lightY stay within 0-100% range
                 const clampedLightX = Math.max(0, Math.min(100, lightX));
                 const clampedLightY = Math.max(0, Math.min(100, lightY));
-
                 aside.style.setProperty("--light-x", `${clampedLightX}%`);
                 aside.style.setProperty("--light-y", `${clampedLightY}%`);
-
                 lastMouseX = clampedLightX;
                 lastMouseY = clampedLightY;
-
                 updateHolographicEffects(rotateX, rotateY);
             });
 
 
             aside.addEventListener("mouseleave", () => {
                 aside.style.setProperty("transition", "transform 0.7s ease-in-out, --light-x 0.7s ease-in-out, --light-y 0.7s ease-in-out");
-
                 const currentRotateX = parseFloat(getComputedStyle(aside).getPropertyValue('--rotateX'));
                 const currentRotateY = parseFloat(getComputedStyle(aside).getPropertyValue('--rotateY'));
-
                 aside.style.setProperty("--rotateX", "0deg");
                 aside.style.setProperty("--rotateY", "0deg");
-
-                // Start transition from last mouse position
                 aside.style.setProperty("--light-x", `${lastMouseX}%`);
                 aside.style.setProperty("--light-y", `${lastMouseY}%`);
                 const maxRotation = 25;
                 const reflectionOpacity = 1 - Math.sqrt(currentRotateX * currentRotateX + currentRotateY * currentRotateY) / maxRotation;
                 reflection.style.opacity = Math.max(0, Math.min(1, reflectionOpacity));
-                reflection_2.style.opacity = Math.max(0, Math.min(1, reflectionOpacity));
-
                 aside.style.setProperty("transition", "transform 0.2s ease-out");
                 resetCard();
             });
@@ -1083,38 +1092,19 @@
                 const holoPattern = document.querySelector('.holo-pattern');
                 const holoLines = document.querySelector('.holo-lines');
                 const cardShine = document.querySelector('.card-shine');
-                // Normalize rotation to values between 0 and 1
                 const normRotateX = (rotateX + 15) / 30;
                 const normRotateY = (rotateY + 15) / 30;
-
-                // Calculate the rotation angle magnitude (distance from center)
                 const magnitude = Math.sqrt(normRotateX * normRotateX + normRotateY * normRotateY);
-
-                // Update the light reflection on the holographic elements
-                // Only changing opacity/color/brightness, not position
                 holoPattern.style.opacity = 0.5;
-                // holoLines.style.opacity = magnitude * 0.5;
-                // cardShine.style.opacity = magnitude * 0.6;
-
-                // Update the color hue based on viewing angle
                 const hue = ((normRotateX + normRotateY) * 180) % 360;
                 holoPattern.style.filter = `hue-rotate(${hue}deg)`;
-
-                // Create a light source effect that moves with the card tilt
                 const angle = Math.atan2(normRotateY, normRotateX) * (180 / Math.PI);
-                //         cardShine.style.background = `linear-gradient(
-                //     ${angle + 135}deg,
-                //     rgba(255, 255, 255, 0) 0%,
-                //     rgba(255, 255, 255, 0.2) 50%,
-                //     rgba(255, 255, 255, 0) 100%
-                //   )`;
             }
 
             function resetCard() {
 
                 holoPattern.style.opacity = 0;
                 reflection.style.opacity = 0;
-                reflection_2.style.opacity = 0;
             }
         });
 
