--- a/index.html
+++ b/index.html
@@ -1028,127 +1028,12 @@
     <script src="static/js/translations.js" type="text/javascript"></script>
     <script src="static/js/language.js" type="text/javascript"></script>
     <script src="static/js/theme.js" type="text/javascript"></script>
+    <script src="static/js/navigation.js" type="text/javascript"></script>
+    <script src="static/js/sidebar-effects.js" type="text/javascript"></script>
+    <script src="static/js/scroll-animations.js" type="text/javascript"></script>
     <script>
         initializeTheme();
         initializeLanguage();
-
-        document.querySelector('.nav-toggle').addEventListener('click', function () {
-            document.querySelector('.nav-menu').classList.toggle('active');
-        });
-
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                document.querySelector('.nav-menu').classList.remove('active');
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        document.addEventListener("DOMContentLoaded", () => {
-            let lastMouseX = 50;
-            let lastMouseY = 50;
-            const aside = document.querySelector("aside");
-            const reflection = aside.querySelector('.reflection');
-            const holoPattern = document.querySelector('.holo-pattern');
-            aside.addEventListener("mouseenter", (e) => {
-                reflection.style.opacity = 1;
-            });
-
-            aside.addEventListener("mousemove", (e) => {
-                const { width, height, left, top } = aside.getBoundingClientRect();
-                const x = (e.clientX - left) / width * 100;
-                const y = (e.clientY - top) / height * 100;
-                const rotateX = ((e.clientY - top - height / 2) / 25) * -1;
-                const rotateY = (e.clientX - left - width / 2) / 25;
-                aside.style.setProperty("--rotateX", `${rotateX}deg`);
-                aside.style.setProperty("--rotateY", `${rotateY}deg`);
-                const lightX = x * 0.8 + (50 + rotateY * 2) * 0.2;
-                const lightY = y * 0.8 + (50 + rotateX * 2) * 0.2;
-                const clampedLightX = Math.max(0, Math.min(100, lightX));
-                const clampedLightY = Math.max(0, Math.min(100, lightY));
-                aside.style.setProperty("--light-x", `${clampedLightX}%`);
-                aside.style.setProperty("--light-y", `${clampedLightY}%`);
-                lastMouseX = clampedLightX;
-                lastMouseY = clampedLightY;
-                updateHolographicEffects(rotateX, rotateY);
-            });
-
-
-            aside.addEventListener("mouseleave", () => {
-                aside.style.setProperty("transition", "transform 0.7s ease-in-out, --light-x 0.7s ease-in-out, --light-y 0.7s ease-in-out");
-                const currentRotateX = parseFloat(getComputedStyle(aside).getPropertyValue('--rotateX'));
-                const currentRotateY = parseFloat(getComputedStyle(aside).getPropertyValue('--rotateY'));
-                aside.style.setProperty("--rotateX", "0deg");
-                aside.style.setProperty("--rotateY", "0deg");
-                aside.style.setProperty("--light-x", `${lastMouseX}%`);
-                aside.style.setProperty("--light-y", `${lastMouseY}%`);
-                const maxRotation = 25;
-                const reflectionOpacity = 1 - Math.sqrt(currentRotateX * currentRotateX + currentRotateY * currentRotateY) / maxRotation;
-                reflection.style.opacity = Math.max(0, Math.min(1, reflectionOpacity));
-                aside.style.setProperty("transition", "transform 0.2s ease-out");
-                resetCard();
-            });
-            function updateHolographicEffects(rotateX, rotateY) {
-                const holoPattern = document.querySelector('.holo-pattern');
-                const holoLines = document.querySelector('.holo-lines');
-                const cardShine = document.querySelector('.card-shine');
-                const normRotateX = (rotateX + 15) / 30;
-                const normRotateY = (rotateY + 15) / 30;
-                const magnitude = Math.sqrt(normRotateX * normRotateX + normRotateY * normRotateY);
-                holoPattern.style.opacity = 0.5;
-                const hue = ((normRotateX + normRotateY) * 180) % 360;
-                holoPattern.style.filter = `hue-rotate(${hue}deg)`;
-                const angle = Math.atan2(normRotateY, normRotateX) * (180 / Math.PI);
-            }
-
-            function resetCard() {
-
-                holoPattern.style.opacity = 0;
-                reflection.style.opacity = 0;
-            }
-
-            // Skills Section Animation Logic
-            const skillsSection = document.getElementById('skills');
-            const detailsElements = skillsSection.querySelectorAll('details');
-            const skillItems = skillsSection.querySelectorAll('.skill');
-
-            // Observer for opening details
-            const detailsObserver = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        detailsElements.forEach(details => {
-                            details.open = true;
-                        });
-                        detailsObserver.unobserve(entry.target); // Stop observing once opened
-                    }
-                });
-            }, { threshold: 0.1 }); // Trigger when 10% of the section is visible
-
-            if (skillsSection) {
-                detailsObserver.observe(skillsSection);
-            }
-
-            // Observer for animating skill items
-            const skillObserver = new IntersectionObserver((entries, observer) => {
-                let delay = 0;
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        setTimeout(() => {
-                            entry.target.classList.add('visible');
-                        }, delay);
-                        delay += 100; // Stagger animation by 100ms
-                        observer.unobserve(entry.target); // Stop observing the item once animated
-                    }
-                });
-            }, { threshold: 0.1, rootMargin: "0px 0px -50px 0px" }); // Trigger slightly before fully visible
-
-            skillItems.forEach(item => {
-                skillObserver.observe(item);
-            });
-        });
-
     </script>
 </body>
 
