--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" media="print"
+        onload="this.media='all'" />
+    <noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    </noscript>
+    <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet" media="print"
+        onload="this.media='all'" />
+    <noscript>
+        <link rel="stylesheet" href="https://www.nerdfonts.com/assets/css/webfont.css">
+    </noscript>
     <script src="https://kit.fontawesome.com/e2ea3b63b3.js" crossorigin="anonymous" async></script>
 
     <!-- Styles -->
@@ -78,7 +86,7 @@
         <aside class="sidebar">
             <div class="sidebar-content">
                 <div class="profile-pic">
-                    <img src="static/img/photo.jpg" alt="Rafael's Profile Picture">
+                    <img src="static/img/photo.jpg" alt="Foto de perfil de Rafael Comunhão Ferreira">
                 </div>
                 <h1>
                     Rafael Comunhão Ferreira
@@ -131,13 +139,14 @@
             </nav>
             <div class="nav-extras">
                 <button class="toggle-btn" id="theme-toggle" aria-label="Toggle Theme">
-                    <img class="img-flag" src="static/img/theme/switch.png">
+                    <img class="img-flag" src="static/img/theme/switch.png" alt="Ícone para alternar tema claro/escuro">
                 </button>
                 <button id="lang-toggle-pt" class="toggle-btn" aria-label="Toggle Language PT-BR">
-                    <img class="img-flag" src="static/img/flags/bra.png">
+                    <img class="img-flag" src="static/img/flags/bra.png"
+                        alt="Selecionar idioma Português (Bandeira do Brasil)">
                 </button>
                 <button id="lang-toggle-en" class="toggle-btn" aria-label="Toggle Language EN-US">
-                    <img class="img-flag" src="static/img/flags/usa.png">
+                    <img class="img-flag" src="static/img/flags/usa.png" alt="Select English language (USA Flag)">
                 </button>
             </div>
         </header>
@@ -655,9 +664,11 @@
             <section id="projects" class="section">
                 <h1 data-translate-key="projects_title">📑 Projetos</h1>
                 <div class="card">
-                    <img class="card-img" src="static/img/utilbox/utilbox-code-header.png" />
+                    <img class="card-img" src="static/img/utilbox/utilbox-code-header.png"
+                        alt="Cabeçalho visual do projeto Utilbox com código C#">
                     <div class="card-content">
-                        <img class="card-content-img" src="static/img/utilbox/utilbox-logo.png" />
+                        <img class="card-content-img" src="static/img/utilbox/utilbox-logo.png"
+                            alt="Logo do projeto Utilbox - uma caixa de ferramentas">
                         <div class="card-title">
                             <h2>Utilbox</h2>
                             <div class="badges card-badges">
@@ -782,7 +793,7 @@
                             <tr>
                                 <td>
                                     <div class="img-flag-container">
-                                        <img class="img-flag" src="static/img/flags/bra.png">
+                                        <img class="img-flag" src="static/img/flags/bra.png" alt="Bandeira do Brasil">
                                     </div>
                                 </td>
                                 <td style="width: 80%;">
@@ -796,7 +807,8 @@
                             <tr>
                                 <td>
                                     <div class="img-flag-container">
-                                        <img class="img-flag" src="static/img/flags/usa.png">
+                                        <img class="img-flag" src="static/img/flags/usa.png"
+                                            alt="Bandeira dos Estados Unidos">
                                     </div>
                                 </td>
                                 <td>
@@ -824,7 +836,8 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/clean_code.jpg" />
+                                    <img src="static/img/books/clean_code.jpg"
+                                        alt="Capa do livro Código Limpo de Robert C. Martin" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
                                 </div>
@@ -842,7 +855,8 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/clean_coder.jpg" />
+                                    <img src="static/img/books/clean_coder.jpg"
+                                        alt="Capa do livro O Codificador Limpo de Robert C. Martin" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
                                 </div>
@@ -861,7 +875,8 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/clean_architecture.jpg" />
+                                    <img src="static/img/books/clean_architecture.jpg"
+                                        alt="Capa do livro Arquitetura Limpa de Robert C. Martin" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
                                 </div>
@@ -880,7 +895,8 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/domain_driven_design.jpg" />
+                                    <img src="static/img/books/domain_driven_design.jpg"
+                                        alt="Capa do livro Domain-Driven Design de Eric Evans" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
                                 </div>
@@ -901,7 +917,8 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/refactoring.jpg" />
+                                    <img src="static/img/books/refactoring.jpg"
+                                        alt="Capa do livro Refatoração de Martin Fowler" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
                                 </div>
@@ -922,7 +939,8 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/C_sharp_pocket.jpg" />
+                                    <img src="static/img/books/C_sharp_pocket.jpg"
+                                        alt="Capa do livro C# 9.0 Pocket Reference de Joseph Albahari" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
                                 </div>
