--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <aside class="sidebar">
             <div class="sidebar-content">
                 <div class="profile-pic">
-                    <img src="static/img/photo.jpg" alt="Foto de perfil de Rafael Comunhão Ferreira">
+                    <img src="static/img/photo.webp" alt="Foto de perfil de Rafael Comunhão Ferreira">
                 </div>
                 <h1>
                     Rafael Comunhão Ferreira
@@ -139,14 +139,15 @@
             </nav>
             <div class="nav-extras">
                 <button class="toggle-btn" id="theme-toggle" aria-label="Toggle Theme">
-                    <img class="img-flag" src="static/img/theme/switch.png" alt="Ícone para alternar tema claro/escuro">
+                    <img class="img-flag" src="static/img/theme/switch.webp"
+                        alt="Ícone para alternar tema claro/escuro">
                 </button>
                 <button id="lang-toggle-pt" class="toggle-btn" aria-label="Toggle Language PT-BR">
-                    <img class="img-flag" src="static/img/flags/bra.png"
+                    <img class="img-flag" src="static/img/flags/bra.webp"
                         alt="Selecionar idioma Português (Bandeira do Brasil)">
                 </button>
                 <button id="lang-toggle-en" class="toggle-btn" aria-label="Toggle Language EN-US">
-                    <img class="img-flag" src="static/img/flags/usa.png" alt="Select English language (USA Flag)">
+                    <img class="img-flag" src="static/img/flags/usa.webp" alt="Select English language (USA Flag)">
                 </button>
             </div>
         </header>
@@ -664,10 +665,10 @@
             <section id="projects" class="section">
                 <h1 data-translate-key="projects_title">📑 Projetos</h1>
                 <div class="card">
-                    <img class="card-img" src="static/img/utilbox/utilbox-code-header.png"
+                    <img class="card-img" src="static/img/utilbox/utilbox-code-header.webp"
                         alt="Cabeçalho visual do projeto Utilbox com código C#">
                     <div class="card-content">
-                        <img class="card-content-img" src="static/img/utilbox/utilbox-logo.png"
+                        <img class="card-content-img" src="static/img/utilbox/utilbox-logo.webp"
                             alt="Logo do projeto Utilbox - uma caixa de ferramentas">
                         <div class="card-title">
                             <h2>Utilbox</h2>
@@ -793,7 +794,7 @@
                             <tr>
                                 <td>
                                     <div class="img-flag-container">
-                                        <img class="img-flag" src="static/img/flags/bra.png" alt="Bandeira do Brasil">
+                                        <img class="img-flag" src="static/img/flags/bra.webp" alt="Bandeira do Brasil">
                                     </div>
                                 </td>
                                 <td style="width: 80%;">
@@ -807,7 +808,7 @@
                             <tr>
                                 <td>
                                     <div class="img-flag-container">
-                                        <img class="img-flag" src="static/img/flags/usa.png"
+                                        <img class="img-flag" src="static/img/flags/usa.webp"
                                             alt="Bandeira dos Estados Unidos">
                                     </div>
                                 </td>
@@ -836,7 +837,7 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/clean_code.jpg"
+                                    <img src="static/img/books/clean_code.webp"
                                         alt="Capa do livro Código Limpo de Robert C. Martin" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
@@ -855,7 +856,7 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/clean_coder.jpg"
+                                    <img src="static/img/books/clean_coder.webp"
                                         alt="Capa do livro O Codificador Limpo de Robert C. Martin" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
@@ -875,7 +876,7 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/clean_architecture.jpg"
+                                    <img src="static/img/books/clean_architecture.webp"
                                         alt="Capa do livro Arquitetura Limpa de Robert C. Martin" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
@@ -895,7 +896,7 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/domain_driven_design.jpg"
+                                    <img src="static/img/books/domain_driven_design.webp"
                                         alt="Capa do livro Domain-Driven Design de Eric Evans" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
@@ -917,7 +918,7 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/refactoring.jpg"
+                                    <img src="static/img/books/refactoring.webp"
                                         alt="Capa do livro Refatoração de Martin Fowler" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
@@ -939,7 +940,7 @@
                             <div class="book-cover">
                                 <div class="book-pages"></div>
                                 <div class="book-image">
-                                    <img src="static/img/books/C_sharp_pocket.jpg"
+                                    <img src="static/img/books/C_sharp_pocket.webp"
                                         alt="Capa do livro C# 9.0 Pocket Reference de Joseph Albahari" />
                                     <div class="book-effect"></div>
                                     <div class="book-light"></div>
