Fixed missing translation

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </h1>
                 <p data-translate-key="skills_instructions">Clique nas
                     categorias para expandi-las e visualizar mais habilidades.</small>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_backend">Backend</h2>
                         <svg aria-hidden="true" focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16"
@@ -194,7 +194,7 @@
                         <span class="skill">DevExpress</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_frontend">Frontend</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
@@ -218,7 +218,7 @@
                         <span class="skill"><i class="devicon-angularjs-plain"></i> Angular</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_databases">Bancos de dados</h2><svg aria-hidden="true"
                             focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16"
@@ -243,7 +243,7 @@
                                 consultas</span></span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_devops">DevOps</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
@@ -262,7 +262,7 @@
                         <span class="skill"><i class="devicon-docker-plain"></i>Docker compose</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_tests">Testes</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
@@ -277,7 +277,7 @@
                         <span class="skill">xUnit</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_architecture">Arquitetura</h2><svg aria-hidden="true"
                             focusable="false" class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16"
@@ -296,7 +296,7 @@
                             Architecture</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_code_quality">Qualidade de
                             código</h2><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
@@ -314,7 +314,7 @@
                         <span class="skill">KISS</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_agile">Metodologias</h2><svg aria-hidden="true" focusable="false"
                             class="octicon octicon-plus" viewBox="0 0 16 16" width="16" height="16" fill="#ffffff">
@@ -329,7 +329,7 @@
                         <span class="skill">Kanban</span>
                     </div>
                 </details>
-                <details>
+                <details open>
                     <summary>
                         <h2 data-translate-key="skills_other">Outras
                             habilidades</h2><svg aria-hidden="true" focusable="false" class="octicon octicon-plus"
@@ -928,7 +928,8 @@
                         <div class="book-details">
                             <div class="book-details-content">
                                 <span class="book-title" data-translate-key="book_refactoring">Refatoração</span>
-                                <span class="book-subtitle" data-translate-key="book_ddd_refactoring">Aperfeiçoando o
+                                <span class="book-subtitle" data-translate-key="book_refactoring_subtitle">Aperfeiçoando
+                                    o
                                     Design de Códigos
                                     Existentes</span>
                                 <span class="book-author">Martin Fowler</span>
