Attemp to improve Lighthouse performance reducing LCP load and delay

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
     ]
   }
   </script>
+    <link rel="preload" href="static/img/card-bg.webp" as="image" fetchpriority="high" />
+    <link rel="preload" href="static/img/effect.webp" as="image" fetchpriority="high" />
 </head>
 
 <body>
