--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="https://kit.fontawesome.com/e2ea3b63b3.js" crossorigin="anonymous" async></script>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="static/css/main.css" />
+    <link as="style" onload="this.rel='stylesheet'" rel="preload" href="static/css/main.css" />
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EEXN3H3SBP"></script>
