Adjusted font visibility + Role on bio card

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
                 <h1>
                     Rafael Comunhão Ferreira
                 </h1>
-                <p class="role" id="role" data-translate-key="role">
-                    Engenheiro da Computação • Engenheiro de Software Full Stack • Especialista .NET</p>
+                <p class="role" data-translate-key="role_1">Engenheiro da Computação</p>
+                <p class="role" data-translate-key="role_2">Engenheiro de Software Full Stack</p>
+                <p class="role" data-translate-key="role_3">Especialista .NET</p>
                 <div>
                     <i class="fa-solid fa-fw fa-location-dot"></i> <span data-translate-key="location">SP
                         • Brasil</span>
