--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                                         usabilidade do sistema e prevenindo problemas de operação.
                                     </li>
                                     <li data-translate-key="job2_description_2">
-                                        Consultas de banco de dados e análise de anolamias para resolver problemas do
+                                        Consultas de banco de dados e análise de anomalias para resolver problemas do
                                         sistema,
                                         atuando como ponte entre usuários
                                         finais e desenvolvedores para aprimoramentos de recursos de sistema.
@@ -713,9 +713,17 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <p data-translate-key="course_oop">Fundamentos da orientação a
-                                        objetos
-                                    </p>
+                                    <div>
+                                        <p data-translate-key="course_oop">Fundamentos da orientação a
+                                            objetos
+                                        </p>
+                                        <div class="badges card-badges">
+                                            <div class="badge">Encapsulamento</div>
+                                            <div class="badge">Herança</div>
+                                            <div class="badge">Polimorfismo</div>
+                                            <div class="badge">Abstração</div>
+                                            <div class="badge">Objetos</div>
+                                        </div>
                                 </td>
                                 <td style="width: 20%;">
                                     <p><span>4.1</span><span data-translate-key="course_hours">horas</span></p>
@@ -725,6 +733,19 @@
                                 <td>
                                     <p data-translate-key="course_csharp">Fundamentos do C#
                                     </p>
+                                    <div class="badges card-badges">
+                                        <div class="badge">.NET</div>
+                                        <div class="badge">Runtimes</div>
+                                        <div class="badge">SDK</div>
+                                        <div class="badge">Modificadores de acesso</div>
+                                        <div class="badge">Tipos primitivos</div>
+                                        <div class="badge">Classes</div>
+                                        <div class="badge">Structs</div>
+                                        <div class="badge">Records</div>
+                                        <div class="badge">Datas</div>
+                                        <div class="badge">Arrays</div>
+                                        <div class="badge">Exceptions</div>
+                                    </div>
                                 </td>
                                 <td>
                                     <p><span>12.2</span><span data-translate-key="course_hours">horas</span></p>
@@ -734,6 +755,16 @@
                                 <td>
                                     <p data-translate-key="course_ef">Fundamentos do Entity Framework
                                     </p>
+                                    <div class="badges card-badges">
+                                        <div class="badge">Code First</div>
+                                        <div class="badge">Database First</div>
+                                        <div class="badge">DataContext</div>
+                                        <div class="badge">Mapeamento</div>
+                                        <div class="badge">Migrações</div>
+                                        <div class="badge">Tracking</div>
+                                        <div class="badge">Operações</div>
+                                        <div class="badge">Transações</div>
+                                    </div>
                                 </td>
                                 <td>
                                     <p><span>4.5</span><span data-translate-key="course_hours">horas</span></p>
@@ -743,6 +774,16 @@
                                 <td>
                                     <p data-translate-key="course_microservices">Fundamentos dos microsserviços
                                     </p>
+                                    <div class="badges card-badges">
+                                        <div class="badge">Protocolos</div>
+                                        <div class="badge">Contratos</div>
+                                        <div class="badge">Distribuição</div>
+                                        <div class="badge">Circuit Breaker</div>
+                                        <div class="badge">Retry Pattern</div>
+                                        <div class="badge">Gateway</div>
+                                        <div class="badge">Segurança</div>
+                                        <div class="badge">Escala</div>
+                                    </div>
                                 </td>
                                 <td>
                                     <p><span>2.0</span><span data-translate-key="course_hours">horas</span></p>
@@ -753,6 +794,12 @@
                                     <p data-translate-key="course_multitenant">Aplicações
                                         Mult-Tenant com Entity Framework Core
                                     </p>
+                                    <div class="badges card-badges">
+                                        <div class="badge">Múltiplas aplicações</div>
+                                        <div class="badge">Múltiplos bancos</div>
+                                        <div class="badge">Múltiplos projetos</div>
+                                        <div class="badge">Regras de negócio</div>
+                                    </div>
                                 </td>
                                 <td>
                                     <p><span>1.2</span><span data-translate-key="course_hours">horas</span></p>
@@ -762,6 +809,15 @@
                                 <td>
                                     <p data-translate-key="course_ddd">
                                         Modelando Domínios Ricos</p>
+                                    <div class="badges card-badges">
+                                        <div class="badge">Linguagem ubíqua</div>
+                                        <div class="badge">Sub-domínios</div>
+                                        <div class="badge">Contextos delimitados</div>
+                                        <div class="badge">Design por contratos</div>
+                                        <div class="badge">Validações de falha rápida</div>
+                                        <div class="badge">Queries</div>
+                                        <div class="badge">Handlers</div>
+                                    </div>
                                 </td>
                                 <td>
                                     <p><span>4.5</span><span data-translate-key="course_hours">horas</span></p>
